--- a/recipe.yml
+++ b/recipe.yml
@@ -51,7 +51,7 @@ task:
         - apt-get install -y software-properties-common
         - add-apt-repository -y ppa:certbot/certbot
         - apt-get -y update
-        - apt-get install certbot
+        - apt-get -y install certbot
         - certbot certonly --webroot --agree-tos --no-eff-email --email {{email}} -w /var/www/letsencrypt -d www.{{domain}} -d {{domain}}
         - certbot renew --dry-run
             
