fixed include file

--- a/nginx-conf/domain-https.conf
+++ b/nginx-conf/domain-https.conf
@@ -33,7 +33,7 @@ server {
     ssl_certificate /etc/letsencrypt/live/{{domain}}/fullchain.pem; # managed by Certbot
     ssl_certificate_key /etc/letsencrypt/live/{{domain}}/privkey.pem; # managed by Certbot
 	ssl_trusted_certificate /etc/letsencrypt/live/{{domain}}/fullchain.pem; # managed by Certbot
-    include /etc/nginx/snippets/letsencrypt.conf;
+    include /etc/nginx/snippets/ssl.conf;
 
 }
 
